# restructuredpython

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  ERRORS.md  MANIFEST.in  README.md  azure-pipelines.yml  compile.bat  errors.md  exclude.txt  pyproject.toml  readme.md  repyconfig.toml
.github/: labeler.yml
.github/scripts/: check_conditions.py
.github/workflows/: Merge.yml  PR.yml  fix-linter.yml  pr-bot.yml  pr-check.yml  publish.yml  pylint.yml  python-package.yml
docs/: Home.rst  changelog.rst  requirements.txt
docs/compiler/error-index/: REPY-0002.rst  REPY-0004.rst
docs/install/: MANIFEST.MF  install.sh
docs/source/: changelog.rst  conf.py  index.rst  roadmap.rst
docs/source/compiler/: overview.rst
docs/source/compiler/error-index/: REPY-0001.rst  REPY-0003.rst
docs/source/compiler/error_index/: REPY-0005.rst  index.rst
docs/source/error_index/: REPY-0005.rst  REPY-0006.rst  index.rst
docs/source/guides/: Getting_Started.rst  Install.rst
docs/source/reference/: Built_in_Functions.rst  Builtin_Decorators.rst  Syntax_Guide.rst  index.rst  repy.rst  repycl.rst  repyconfig.toml.rst
docs/source/reference/Builtin_Decorators/: access_control.rst  index.rst  logging.rst  memoization.rst  retry.rst  strict_types.rst  timer.rst
docs/source/reference/Exposed_APIs/: .check_syntax().rst  .parse().rst  index.rst
docs/source/reference/Features/: OPTIMIZE.rst  chaining.rst  comments.rst  control.rst  decorators.rst  headers.rst  index.rst
docs/source/tutorials/compiled_programs/: case.py  chaining.py  input.py
docs/source/tutorials/programs/: Alarm.repy  case.repy  header-file.cdata  headers.repy  try_and_catch.repy
docs/tutorials/: Example_Programs.rst
install/: InstallWizard.java  install.bat  install.ps1
restructuredpython/: __init__.py  check_syntax.py  cload.py  parser.py  restructuredpython.py  tempload.py  test.py
restructuredpython.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
restructuredpython/include/: io.c
restructuredpython/lib/: io.c
restructuredpython/predefined/: decorators.py
restructuredpython/predefined/decorators/: access_control.py  logging.py  memoization.py  retry.py  strict_types.py  timer.py
restructuredpython/predefined/subinterpreter/: __init__.py  optimize.py
src/: REPY
tests/.py/: Alarm.py  comments.py  headers.py  try_and_catch.py
tests/.repy/: Alarm.repy  chaining.repy  comments.repy  header-file.cdata  input.repy  ops.py  ops.repy
