[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "restructuredpython"
version = "1.1.0"
description = "A superset of Python with js-like syntax"
authors = [{name = "Rihaan Meher", email = "meherrihaan@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
repy = "restructuredpython.restructuredpython:main"
repycl = "restructuredpython.restructuredpython:launch"

