[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "restructuredpython"
version = "2.2.1"
description = "A superset of Python with many new features, including full JS integration, multiline comments, header files, and optional curly brackets around control statements"
authors = [{name = "Rihaan Meher", email = "meherrihaan@gmail.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "textfmt"
]
[project.scripts]
repy = "restructuredpython.restructuredpython:main"
repycl = "restructuredpython.restructuredpython:launch"

[tool.setuptools]
packages = ["restructuredpython"]

