[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "restructuredpython"
version = "2.5.0"
requires-python = ">= 3.10"
description = "A superset of Python with many new features, including full JS integration, multiline comments, header files, and optional curly brackets around control statements"
authors = [{name = "Rihaan Meher", email = "meherrihaan@gmail.com"}]
license = { text = "Apache-2.0" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "textfmt"
]

[project.scripts]
repy = "restructuredpython.restructuredpython:main"
repycl = "restructuredpython.restructuredpython:launch"

[tool.setuptools]
packages = ["restructuredpython"]
ext-modules = [
  {name = "restructuredpython.api.libio", sources = ["restructuredpython/lib/io.c"]}
]

[project.urls]
Homepage = "https://restructuredpython.rf.gd"
Documentation = "https://restructuredpython.readthedocs.org"
Repository = "https://github.com/sharktide/restructuredpython.git"
Issues = "https://github.com/sharktide/restructuredpython/issues"
Changelog = "https://restructuredpython.readthedocs.io/en/latest/changelog.html"